@@ -19,6 +19,7 @@
 * EventDao::get returns null instead of throws exception if no event exists
 * Improved synchronization in real-time task subsystem to ensure tasks are not lost
 * Purged values removed from the point's value cache
+* Reduce log output for REST Exceptions that are passed back in the response
 
 *Version 3.3.0*
 * Ability to import a point hierarchy path for data points in the data point JSON via "path" : "new path"
